--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.0"
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.almacen.keplerclientesapp"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -42,7 +41,7 @@ dependencies {
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
     implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
     implementation 'com.google.zxing:core:3.3.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -51,7 +50,7 @@ dependencies {
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
+    implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
 
 
 }
