--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.almacen.keplerclientesapp"
         minSdkVersion 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -30,28 +30,28 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
-    implementation 'com.google.android.material:material:1.2.0-alpha03'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation files('libs\\ksoap2-android-assembly-3.6.4-jar-with-dependencies.jar')
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment:2.3.5'
-    implementation 'androidx.navigation:navigation-ui:2.3.5'
+    implementation 'androidx.navigation:navigation-fragment:2.8.3'
+    implementation 'androidx.navigation:navigation-ui:2.8.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'com.github.d-max:spots-dialog:1.1@aar'
-    implementation 'androidx.annotation:annotation:1.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.github.d-max:spots-dialog:0.7@aar'
+    implementation 'androidx.annotation:annotation:1.9.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
-    implementation 'com.google.zxing:core:3.3.0'
-    implementation 'androidx.activity:activity:1.8.0'
+    implementation 'com.google.zxing:core:3.4.1'
+    implementation 'androidx.activity:activity:1.9.3'
+    implementation files('D:\\StudioProjects\\KeplerAppClientes\\app\\libs\\autoimageslider-1.4.0.aar')
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
-    implementation 'com.github.smarteist:autoimageslider:1.4.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.27'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
     implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
 
 
